# opnsense-upgrade

./: .gitignore  CLAUDE.md  MCP-PLAN.md  README.md  fw.sh  push.sh
.claude/: settings.json
.claude/skills/watch-update/: SKILL.md  test_watch_update.py  watch-update.sh  watch_update.py
mcp/: README.md  SETUP.md  pyproject.toml
mcp/src/opnsense_mcp/: api.py  config.py  server.py  tools.py
mcp/tests/: test_batch_summary.py
ps1/: Enable-SplitRouting-WithModule.ps1  INSTALL-GUIDE.md  MODULE-README.md  OPNsenseCommon.psm1  README.md
python/: README.md  opnsense-upgrade.py  run-upgrade-on-firewall.sh  test-on-firewall.sh  test_shell.py
