[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "opnsense-mcp"
version = "1.0.0"
description = "MCP server for OPNsense firewall management via REST API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
opnsense-mcp = "opnsense_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]
